[CORE] Support JDK17 (#5120)
* Support JDK17

* address comment

---------

Co-authored-by: Kent Yao <yao@apache.org>